<resources>
    <string name="app_name">Zul Story App</string>
    <string name="upcoming_event">Upcoming</string>
    <string name="finished_event">Finished</string>
    <string name="upcoming">Upcoming</string>
    <string name="finished">Finished</string>
    <string name="favorite">Favorite</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="daftar">Daftar</string>
    <string name="feed">Feed</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_story">Add Story</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="story_maps">Story Maps</string>
    <string name="title_activity_story_maps">StoryMapsActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">Retry</string>
    <string name="setting">Setting</string>

</resources>