<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pages.UploadImageFragment">

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:visibility="visible"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_preview"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_margin="16dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/gunung_prau">

            </ImageView>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_from_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camera">

                </Button>

                <View
                    android:layout_width="30dp"
                    android:layout_height="wrap_content">

                </View>

                <Button
                    android:id="@+id/btn_from_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gallery">

                </Button>
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_margin="16dp"
                android:layout_height="100dp"
                android:hint="@string/description">

            </EditText>

            <Button
                android:id="@+id/btn_upload_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/add_story"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>